unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/Parametros_Integracion_EBS__mdt.object-meta.xml
<CustomObject>
    <label>Parámetros Integración EBS</label>
    <pluralLabel>Parámetros Integración EBS</pluralLabel>
</CustomObject>