unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Fraccionamientos_Dias__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos_Dias__c</fullName>
    <label>Fraccionamientos: Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>