unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Fraccionamientos_Id_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamientos_Id_Fraccionamiento__c</fullName>
    <label>Fraccionamientos: Id Fraccionamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>