unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Servicio_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Clientes__c</fullName>
    <label>Servicio Clientes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>