unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Servicio_Extraer_Viviendas__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Extraer_Viviendas__c</fullName>
    <label>Servicio Extraer Viviendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>