unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Servicio_Facturas__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Facturas__c</fullName>
    <label>Servicio Facturas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>