unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Servicio_Obtener_Fraccionamientos__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Obtener_Fraccionamientos__c</fullName>
    <label>Servicio Obtener Fraccionamientos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>