unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Servicio_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Pagos__c</fullName>
    <label>Servicio Pagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>