unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/URL_base__c.field-meta.xml
<CustomField>
    <fullName>URL_base__c</fullName>
    <label>URL base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>