unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Viviendas_Dias__c.field-meta.xml
<CustomField>
    <fullName>Viviendas_Dias__c</fullName>
    <label>Viviendas: Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>