unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Viviendas_Estatus__c.field-meta.xml
<CustomField>
    <fullName>Viviendas_Estatus__c</fullName>
    <inlineHelpText>Valores separados por comas, por ejemplo: 17,11 o bien un único valor numérico</inlineHelpText>
    <label>Viviendas: Estatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>