unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/fields/Viviendas_Id_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Viviendas_Id_Vivienda__c</fullName>
    <label>Viviendas: Id Vivienda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>