unpackaged/main/default/objects/Parametros_Integracion_EBS__mdt/listViews/Todos_los_registros.listView-meta.xml
<ListView>
    <fullName>Todos_los_registros</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>URL_base__c</columns>
    <columns>Servicio_Clientes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los registros</label>
    <language>en_US</language>
</ListView>